--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,17 +35,22 @@
             />
             <div class="mt-3 votingContainer">
               <% if (hasVoted) { %>
-              <div>
-                <p class="votingResults mb-0" id="dog1">
-                  <%=contender.votes%> out of <%=totalVotes%>
-                </p>
-              </div>
+              <p class="votingResults mb-0" id="dog1">
+                <%=contender.votes%> out of <%=totalVotes%>
+              </p>
               <%} else {%>
               <form
                 method="POST"
                 action="/vote/vote/<%=contender._id%>?_method=PUT"
               >
-                <button href="#" id="1" class="btn btn-primary">Vote</button>
+                <button
+                  href="#"
+                  id="1"
+                  class="btn btn-primary"
+                  data-id="<%=contender._id%>"
+                >
+                  Vote
+                </button>
               </form>
               <%}%>
             </div>
@@ -59,6 +64,7 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
+    <script src="/socket.io/socket.io.js"></script>
     <script type="module" src="/js/main.js"></script>
   </body>
 </html>
