--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,8 +21,20 @@
   </head>
 
   <body>
-    <h1 class="my-5">Vote for the Best Dog</h1>
     <div class="container">
+      <h1 class="my-5">Vote for the Best Dog</h1>
+      <div class="timer"></div>
+      <div>
+        <% if(user === null ) { %>
+        <h2>Log in to vote</h2>
+        <a href="http://localhost:3000/login" class="btn btn-primary">Log In</a>
+        <%} else {%>
+        <h2>Welcome <%=nickname%></h2>
+        <a href="http://localhost:3000/logout" class="btn btn-primary">
+          Log Out
+        </a>
+        <%}%>
+      </div>
       <div class="row d-flex justify-content-around">
         <% contenders.forEach(contender => { %>
         <div class="card col-12 col-md-5 m-2">
@@ -33,8 +45,9 @@
               class="card-img-top"
               alt="cute dog"
             />
+            <% if (user !== null) { %>
             <div class="mt-3 votingContainer">
-              <% if (hasVoted) { %>
+              <% if (user.hasVoted) { %>
               <p class="votingResults mb-0" id="dog1">
                 <%=contender.votes%> out of <%=totalVotes%>
               </p>
@@ -46,7 +59,7 @@
                 <button
                   href="#"
                   id="1"
-                  class="btn btn-primary"
+                  class="btn btn-primary submitBtn"
                   data-id="<%=contender._id%>"
                 >
                   Vote
@@ -54,6 +67,7 @@
               </form>
               <%}%>
             </div>
+            <%}%>
           </div>
         </div>
         <%})%>
@@ -64,7 +78,9 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/moment@2.29.1/moment.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
+    <script type="module" src="/js/socket-io.js"></script>
     <script type="module" src="/js/main.js"></script>
   </body>
 </html>
